CHNG: header, site menu overlap issue solution

--- a/src/blocks/Header/_Header.scss
+++ b/src/blocks/Header/_Header.scss
@@ -14,6 +14,8 @@
 
     z-index: 1002;
     overflow: visible;
+     
+    z-index: 1001;
 
     &_color_black {
       box-shadow: 4px 4px 14px 4px hsla(0, 0%, 0%, 0.9);        
@@ -57,14 +59,16 @@
           grid-area: main;
           // background-color: blue;
           position: relative;
+          z-index: 1001;
         }
         &_site-menu {
           grid-area: site-menu;
-          // background-color: brown;
+          // background-color: brown;           
         }
         &_reservation {
           grid-area: reservation;
           // background-color: cadetblue;
+          z-index: 1001;
         }
         &_site-menu-button {
           grid-area: site-menu-button;
@@ -72,6 +76,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          z-index: 1001;
         }
       // Layout in each Grid Area.
       }
