--- a/src/blocks/Header/__SiteMenu/_Header__SiteMenu.scss
+++ b/src/blocks/Header/__SiteMenu/_Header__SiteMenu.scss
@@ -10,8 +10,9 @@
       top: 0;
       left: 0;
     
+ 
       width: 100vw;
-      height: 85vh;
+      height: 85vh;      
     
       transition: transform .3s cubic-bezier(.1, .7, 0.5, 1);
       overflow: scroll;
@@ -32,7 +33,7 @@
       &_hide {
         @include responsive.respond-to('min', '200') {        
         // transform: translate3d(-100vw, 0, 0);
-        transform: translate3d(0, -100vh, 0);
+        transform: translate3d(0, -85vh, 0);
       
       
         }  
